<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstNameEditText">First name: Ivan </string>
    <string name="secondNameEditText">Second name: Ivanov </string>
    <string name="dateOfBirthEditText">Date of birth: 3/10/2022 </string>
    <string name="emailEditText">E-mail: user@mail.com </string>
    <string name="passwordEditText">Password </string>
    <string name="repeatPasswordEditText">Repeat your password </string>
    <string name="PageTitle"> Registration </string>
</resources>