<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_gradient"
    tools:context=".ui.UserRegistrationFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="366dp"
        android:layout_height="102dp"
        android:layout_marginTop="32dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-thin"
        android:text="@string/PageTitle"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/firstNameEditText"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextUserSecondName"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/secondNameEditText"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/emailEditText"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPasswordRepeat"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/repeatPasswordEditText"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="259dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/dateOfBirthEditText"
        android:inputType="date"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserSecondName" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:background="@drawable/round_main_button"
        android:text="Registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeat"
        app:layout_constraintVertical_bias="0.291" />

    <Button
        android:id="@+id/button_open_calendar"
        android:layout_width="77dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_button"
        android:text="Calendar"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserSecondName"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>